# src

./: .clang-format  .gitattributes  .gitignore  .whitesource  AGENTS.md  AI_POLICY.md  CACerts  CHANGES  CLAUDE.md  CMakeLists.txt  CODE_OF_CONDUCT.md  COPYRIGHT  ChangeLog  ChangeLog-2008  EULA  FAQ  FREEBSD-upgrade  FUNDING.yml  FlexLexer.h  Jenkinsfile  LOCKS  MAINTAINERS  MIDNIGHTBSD-upgrade  Makefile  Makefile.am  Makefile.in  Makefile.inc1  Makefile.libcompat  Makefile.mips  Makefile.sys.inc  NEWS  ObsoleteFiles.inc  PGPKEYS  README  README-release  README.md  RELEASE_NOTES  SECURITY.md  THANKS  TODO  (+110 more)
.github/: pull_request_template.md
.hooks/: prepare-commit-msg
1.8.17/: INSTALL  configure
20130220/: unvis.3  vis.h
20141031/: tnftp.h
20170423/: unvis.3  unvis.c  vis.3
210/: aclocal.m4  configure  configure.ac
3.9p1/: defines.h
541/: Makefile
R38/: setmode.c
R40/: dot.mkshrc
R40c/: dot.mkshrc
R40d/: dot.mkshrc
R40f/: dot.mkshrc
R44/: dot.mkshrc
R48/: dot.mkshrc
apache/: Makefile  Makefile.inc
beos/: nm.c
build-aux/: arg-nonnull.h
cddl/: Makefile  Makefile.inc
cf/: README
contrib/: check-secure-delegation.pl.in  libarchive.1aix53.spec  libarchive.spec  smcontrol.pl
contrib/diff/: .gitattributes  AUTHORS  ChangeLog  ChangeLog-2008  FREEBSD-Xlist  FREEBSD-upgrade  MIDNIGHTBSD-upgrade  Makefile.am  NEWS  README-release  cfg.mk  config.h  configure
contrib/diff/build-aux/: warn-on-use.h
contrib/diff/doc/: Makefile.am  diff.info  diff.texi  diffutils.texi  stamp-vti
contrib/diff/gnulib-tests/: argmatch.c  argmatch.h  binary-io.h  float.c  float.in.h  getcwd-lgpl.c  getdtablesize.c  gnulib.mk  hash-pjw.c  hash-pjw.h  macros.h  putenv.c  same-inode.h  setenv.c  signature.h  sleep.c  symlink.c  test-alloca-opt.c  test-argmatch.c  test-binary-io.c  test-bitrotate.c  test-btowc.c  test-c-ctype.c  test-c-stack.c  test-c-strcasecmp.c  test-c-strncasecmp.c  test-dirname.c  test-dup2.c  test-environ.c  test-errno.c  test-exclude.c  test-fcntl-h.c  test-fcntl.c  test-fnmatch.c  test-freopen-safer.c  test-freopen.c  test-getdtablesize.c  test-getopt.c  test-getopt.h  test-getopt_long.h  (+56 more)
contrib/diff/gnulib-tests/uniwidth/: test-uc_width.c  test-uc_width2.c
contrib/diff/lib/: Makefile.am  Makefile.in  cmpbuf.c  config.hin  gnulib.mk  langinfo.in.h  localcharset.c  regcomp.c  regex_internal.c  regex_internal.h  regexec.c  sh-quote.c  stdio.in.h  strcasecmp.c  striconv.c  string.in.h  strings.in.h  strncasecmp.c  strptime.c  sys_stat.in.h  sys_time.in.h  timegm.c  unistd.in.h  wchar.in.h  wcwidth.c
contrib/diff/man/: Makefile.am  Makefile.in  cmp.1  cmp.x  diff.1  diff3.1  help2man  sdiff.1  sdiff.x
contrib/diff/po/: Makevars  POTFILES.in  de.po  diffutils.pot  el.po  eo.po  fi.po  fr.po  ga.po  gl.po  hr.po  id.po  it.po  ms.po  nl.po  sr.po  vi.po  zh_TW.po
contrib/diff/src/: Makefile.am  Makefile.in  analyze.c  cmp.c  context.c  io.c  sdiff.c  side.c  system.h  util.c
contrib/diff/tests/: Makefile.am  Makefile.in  basic  binary  filename-quoting  function-line-vs-leading-space  help-version  init.sh  label-vs-func  no-dereference  stdin
contrib/openpam/modules/pam_deny/: Makefile.am  Makefile.in  pam_deny.c
contrib/openpam/modules/pam_unix/: Makefile.am  Makefile.in  pam_unix.c
cpio/: cpio_windows.c
crypto/: README
crypto/heimdal/appl/: Makefile.am  Makefile.in
crypto/heimdal/appl/afsutil/: Makefile.am  Makefile.in  afslog.1  afslog.c  pagsh.1  pagsh.c
crypto/heimdal/appl/ftp/: Makefile.am  Makefile.in
crypto/heimdal/appl/ftp/common/: Makefile.am  Makefile.in  buffer.c  common.h  sockbuf.c
crypto/heimdal/appl/ftp/ftp/: Makefile.am  Makefile.in  cmds.c  domacro.c  extern.h  ftp.c  ftp_locl.h  globals.c  gssapi.c  kauth.c  krb4.c  main.c  ruserpass.c  security.c  security.h
crypto/heimdal/appl/ftp/ftpd/: Makefile.am  Makefile.in  ftpcmd.c  ftpcmd.y  ftpd.c  ftpd_locl.h  ftpusers.5  gss_userok.c  gssapi.c  kauth.c  krb4.c  logwtmp.c  ls.c  popen.c  security.c
crypto/heimdal/appl/gssmask/: Makefile.am  Makefile.in  common.c  common.h  gssmaestro.c  gssmask.c  protocol.h
crypto/heimdal/appl/kf/: Makefile.am  Makefile.in  kf.1  kf.c  kf_locl.h  kfd.8  kfd.c
crypto/heimdal/appl/login/: Makefile.am  Makefile.in  conf.c  env.c  limits_conf.c  login.1  login.access.5  login.c  login_access.c  login_locl.h  loginpaths.h  osfc2.c  read_string.c  shadow.c  stty_default.c  tty.c  utmp_login.c  utmpx_login.c
crypto/heimdal/appl/push/: Makefile.am  Makefile.in  pfrom.1  pfrom.in  push.8  push.c  push_locl.h
crypto/heimdal/appl/rcp/: Makefile.am  Makefile.in  extern.h  rcp.1  rcp_locl.h  util.c
crypto/heimdal/appl/rsh/: Makefile.am  Makefile.in  common.c  limits_conf.c  login_access.c  rsh.1  rsh.c  rsh_locl.h  rshd.8  rshd.c
crypto/heimdal/appl/su/: Makefile.am  Makefile.in  su.1  su.c  supaths.h
crypto/heimdal/appl/telnet/: Makefile.am  Makefile.in
crypto/heimdal/appl/telnet/libtelnet/: Makefile.am  Makefile.in  auth-proto.h  auth.c  auth.h  enc-proto.h  enc_des.c  encrypt.c  encrypt.h  genget.c  kerberos.c  kerberos5.c  krb4encpwd.c  misc-proto.h  misc.c  rsaencpwd.c  spx.c
crypto/heimdal/appl/telnet/telnet/: Makefile.am  Makefile.in  authenc.c  commands.c  externs.h  main.c  network.c  ring.c  ring.h  sys_bsd.c  telnet.c  telnet_locl.h  terminal.c  utilities.c
crypto/heimdal/appl/telnet/telnetd/: Makefile.am  Makefile.in  authenc.c  ext.h  global.c  slc.c  state.c  sys_term.c  telnetd.c  termstat.c  utility.c
crypto/heimdal/appl/test/: Makefile.am  Makefile.in  common.c  gss_common.c  gss_common.h  gssapi_client.c  gssapi_server.c  http_client.c  nt_gss_client.c  nt_gss_common.c  nt_gss_common.h  nt_gss_server.c  tcp_client.c  tcp_server.c  test_locl.h  uu_client.c  uu_server.c
crypto/heimdal/include/hcrypto/: Makefile.am  Makefile.in
doc/: Makefile  Makefile.in  WRITING_TESTS.md  diagmeet.note  stamp-vti
docutil/: patch-db2latex-duplicate-template-bug  patch-db2latex-xsltproc-title-bug
editmap/: Makefile.m4  editmap.0
etc/: Makefile  Makefile.depend  amd.map  apmd.conf  audit_class  audit_event  (+78 more)
(+53096 files in other folders)
