# Automakefile for GNU Diffutils library.

# Copyright (C) 2001-2002, 2004, 2006, 2009-2013 Free Software Foundation, Inc.

# This program is free software: you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.

# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.

# You should have received a copy of the GNU General Public License
# along with this program.  If not, see <http://www.gnu.org/licenses/>.

AM_CFLAGS =
BUILT_SOURCES =
CLEANFILES =
EXTRA_DIST =
MOSTLYCLEANDIRS =
MOSTLYCLEANFILES =
MAINTAINERCLEANFILES =
SUFFIXES =
noinst_LIBRARIES =
noinst_HEADERS =

include gnulib.mk

noinst_HEADERS += cmpbuf.h prepargs.h
libdiffutils_a_SOURCES += cmpbuf.c prepargs.c

AM_CFLAGS += $(GNULIB_WARN_CFLAGS) $(WERROR_CFLAGS)
