# $Id: Makefile.am,v 1.1.1.1 2012-07-21 15:09:09 laffer1 Exp $

include $(top_srcdir)/Makefile.am.common

CLEANFILES =		\
	aes.h		\
	bn.h		\
	des.h		\
	dh.h		\
	dsa.h		\
	engine.h	\
	evp.h		\
	hmac.h		\
	md2.h		\
	md4.h		\
	md5.h		\
	pkcs12.h	\
	rand.h		\
	rc2.h		\
	rc4.h		\
	rsa.h		\
	sha.h		\
	ui.h
